--- a/index.html
+++ b/index.html
@@ -2,38 +2,74 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Portfolio Chandra</title>
   <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
+    :root {
+      --primary: #007bff;
+      --light-bg: #f0f0f0;
+      --dark-bg: #121212;
+      --light-text: #333;
+      --dark-text: #eee;
+    }
+
+    * {
+      box-sizing: border-box;
       margin: 0;
       padding: 0;
-      background: #f0f0f0;
-      color: #333;
+    }
+
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: var(--light-bg);
+      color: var(--light-text);
       transition: background 0.4s, color 0.4s;
+      scroll-behavior: smooth;
     }
 
     header {
-      background: #007BFF;
+      background: var(--primary);
       color: white;
-      padding: 1rem 2rem;
+      padding: 1rem;
       display: flex;
       justify-content: space-between;
       align-items: center;
+      flex-wrap: wrap;
       position: sticky;
       top: 0;
       z-index: 100;
     }
 
+    header h1 {
+      font-size: 1.3rem;
+    }
+
+    nav {
+      display: flex;
+      gap: 1rem;
+      flex-wrap: wrap;
+      margin-top: 0.5rem;
+    }
+
     nav a {
-      margin-left: 1rem;
       color: white;
       text-decoration: none;
+      font-size: 0.95rem;
+    }
+
+    .toggle-dark {
+      background: none;
+      border: 2px solid white;
+      color: white;
+      padding: 0.3rem 0.8rem;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 0.9rem;
+      margin-left: 1rem;
     }
 
     section {
-      padding: 4rem 2rem;
+      padding: 3rem 1.5rem;
       opacity: 0;
       transform: translateY(30px);
       transition: all 0.6s ease-out;
@@ -42,6 +78,11 @@
     section.show {
       opacity: 1;
       transform: translateY(0);
+    }
+
+    h2 {
+      margin-bottom: 1rem;
+      font-size: 1.4rem;
     }
 
     .project-card {
@@ -54,16 +95,7 @@
     }
 
     .project-card:hover {
-      transform: scale(1.03);
-    }
-
-    .toggle-dark {
-      background: none;
-      border: 2px solid white;
-      padding: 0.3rem 0.8rem;
-      color: white;
-      border-radius: 5px;
-      cursor: pointer;
+      transform: scale(1.02);
     }
 
     footer {
@@ -71,11 +103,13 @@
       padding: 1rem;
       background: #222;
       color: white;
+      font-size: 0.9rem;
     }
 
+    /* Dark Mode */
     body.dark {
-      background: #121212;
-      color: #eee;
+      background: var(--dark-bg);
+      color: var(--dark-text);
     }
 
     body.dark header {
@@ -84,28 +118,42 @@
 
     body.dark .project-card {
       background: #2a2a2a;
-      color: #eee;
+      color: var(--dark-text);
     }
 
-    html {
-      scroll-behavior: smooth;
+    @media (min-width: 600px) {
+      header {
+        flex-direction: row;
+      }
+
+      nav {
+        margin-top: 0;
+      }
+
+      section {
+        padding: 4rem 4rem;
+      }
+
+      h2 {
+        font-size: 1.6rem;
+      }
     }
   </style>
 </head>
 <body>
   <header>
     <h1>Chandra</h1>
-    <div>
+    <nav>
       <a href="#about">Tentang</a>
       <a href="#projects">Proyek</a>
       <a href="#contact">Kontak</a>
       <button class="toggle-dark">🌙</button>
-    </div>
+    </nav>
   </header>
 
   <section id="about">
     <h2>Tentang Saya</h2>
-    <p>Halo! Saya Chandra, seorang developer web pemula yang sedang belajar membuat website interaktif menggunakan HTML, CSS, dan JavaScript.</p>
+    <p>Halo! Saya Chandra, seorang developer web pemula yang sedang belajar membuat website interaktif dan responsif menggunakan HTML, CSS, dan JavaScript.</p>
   </section>
 
   <section id="projects">
@@ -127,7 +175,7 @@
   </section>
 
   <footer>
-    &copy; 2025 Chandra
+    &copy; 2025 Chandra / CHX
   </footer>
 
   <script>
@@ -136,20 +184,19 @@
       document.body.classList.toggle('dark');
     };
 
-    // Scroll animation
+    // Reveal on scroll
     const sections = document.querySelectorAll('section');
-    const revealOnScroll = () => {
-      const triggerBottom = window.innerHeight * 0.85;
-      sections.forEach(section => {
-        const rect = section.getBoundingClientRect();
-        if (rect.top < triggerBottom) {
-          section.classList.add('show');
+    function reveal() {
+      const trigger = window.innerHeight * 0.85;
+      sections.forEach(sec => {
+        const pos = sec.getBoundingClientRect().top;
+        if (pos < trigger) {
+          sec.classList.add('show');
         }
       });
-    };
-
-    window.addEventListener('scroll', revealOnScroll);
-    window.addEventListener('load', revealOnScroll);
+    }
+    window.addEventListener('scroll', reveal);
+    window.addEventListener('load', reveal);
   </script>
 </body>
 </html>
